[metadata]
name = pypaxtor
version = 0.1.0
author = Ted Tibbetts
author_email = ted@circulated.ca
description = Cross-platfom provisioning of home directory storage
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/intuited/pypaxtor
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = .
